<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Twitter</string>

    <!-- Login activity -->
    <string name="login_label">Log in</string>
    <string name="action_settings">Settings</string>
    <string name="highlight_preamble">To use Highlight, please sign in with one of the services below:</string>
    <string name="why_not_email_title">Why not email?</string>
    <string name="why_not_email_body">Highlight is based on real identity and mutual friends. 
        Using these services allows us to show you how you\'re connected to the people around you. 
        It also makes it super easy to create a Highlight profile.</string>
    <string name="feedback_label">
<![CDATA[
        Please <a href="http://highlight.com">let us know</a> if you have feedback on this or if 
        you would like to log in with another identity service. Thanks!   
    ]]>
    </string>
    <string name="permission_label">We won\'t post things without your permission.</string>
    
    <!-- Timeline Activity -->
    <string name="title_activity_timeline">Timeline</string>
    <string name="title_activity_compose">Compose</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_profile">Profile</string>
    <string name="action_message">Profile</string>
    <string name="action_logout">Logout</string>
    <string name="tab_home">Home</string>
    <string name="tab_mentions">Mentions</string>

    <!-- Compose Activity -->
    <string name="action_tweet">Tweet</string>
    <string name="empty"></string>
    <string name="et_hint_update_status">Update Status</string>
    <string name="tv_profile_name">Profile Name</string>
    <string name="title_activity_profile">ProfileActivity</string>    <string name="max_char_count">140</string>
    
    <!-- Profile Fragment -->
    <string name="user_follower">Followers</string>
    <string name="user_following">Following</string>
    <string name="user_num_tweets">Tweets</string>
    <string name="title_activity_tweet_details">Tweet Details</string>
    
    <!-- Search View -->
    <string name="search_hint">Search Tweet</string>

</resources>