<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" 
    android:paddingLeft="@dimen/activity_login_margin"
    android:paddingRight="@dimen/activity_login_margin">

    <TextView
        android:id="@+id/feedback_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/why_not_email_body"
        android:layout_alignRight="@+id/why_not_email_body"
        android:layout_below="@+id/why_not_email_body"
        android:layout_marginTop="@dimen/margin_10_dp"
        android:text="@string/feedback_label" />

    <TextView
        android:id="@+id/permission_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/feedback_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_10_dp"
        android:text="@string/permission_label"
        android:textColor="#bbbbbb"
        android:textSize="@dimen/small_font_size" />

    <ImageButton
        android:id="@+id/btnLinkedIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnFacebook"
        android:background="@null"
        android:contentDescription="@string/empty"
        android:src="@drawable/linkedin_connect" 
        android:onClick="loginToRest"/>

    <ImageButton
        android:id="@+id/btnFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/highlight_preamble"
        android:background="@null"
        android:contentDescription="@string/empty"
        android:src="@drawable/facebook_connect" />

    <TextView
        android:id="@+id/why_not_email_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/why_not_email_title"
        android:layout_centerHorizontal="true"
        android:text="@string/why_not_email_body" />

    <TextView
        android:id="@+id/why_not_email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/why_not_email_body"
        android:layout_below="@+id/btnLinkedIn"
        android:layout_marginTop="21dp"
        android:text="@string/why_not_email_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/highlight_preamble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnFacebook"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:text="@string/highlight_preamble"
        android:textSize="@dimen/small_font_size" />

</RelativeLayout>