<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ComposeActivity" >

    <ImageView
        android:id="@+id/ivProfileImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/empty"
        android:src="@null" />

    <TextView
        android:id="@+id/tvProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ivProfileImg"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/ivProfileImg"
        android:layout_marginLeft="24dp"
        android:layout_toRightOf="@+id/ivProfileImg"
        android:text="@string/tv_profile_name" />

    <EditText
        android:id="@+id/etComposeTweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ivProfileImg"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ivProfileImg"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/et_hint_update_status" />

</RelativeLayout>